tap(4): Prune dead branches around tap_dev_close.

No functional change intended.

PR kern/58166